<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_update_inst_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_inst_id"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_inst_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_inst_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_inst_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_inst_type"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_user_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_buy_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_buy_date"
        android:inputType="date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_updatecomfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_comfirm" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>